force-app/main/default/objects/Applicant__c/fields/Drivers_License_No__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_No__c</fullName>
    <label>Driver&apos;s License No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>