force-app/main/default/objects/Applicant__c/fields/Employment_Information__c.field-meta.xml
<CustomField>
    <fullName>Employment_Information__c</fullName>
    <label>Employment Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>