force-app/main/default/objects/Applicant__c/fields/Estimated_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Move_In_Date__c</fullName>
    <label>Estimated Move In Date</label>
    <type>Date</type>
</CustomField>