force-app/main/default/objects/Applicant__c/fields/Eviction_History__c.field-meta.xml
<CustomField>
    <fullName>Eviction_History__c</fullName>
    <label>Eviction History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>