force-app/main/default/objects/Applicant__c/fields/Has_Additional_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Has_Additional_Occupants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Additional Occupants</label>
    <type>Checkbox</type>
</CustomField>