force-app/main/default/objects/Applicant__c/fields/Has_Criminal_Record__c.field-meta.xml
<CustomField>
    <fullName>Has_Criminal_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Criminal Record</label>
    <type>Checkbox</type>
</CustomField>