force-app/main/default/objects/Applicant__c/fields/Is_Employed__c.field-meta.xml
<CustomField>
    <fullName>Is_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employed</label>
    <type>Checkbox</type>
</CustomField>