force-app/main/default/objects/Applicant__c/fields/Property_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Property_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property of Interest</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>